--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ Text Domain: tibet
 
 /* Add any custom styles below */
 
-body {
+/* body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     background-color: #fefced;
@@ -46,6 +46,6 @@ body {
     color: #000;
     border: 2px solid #000;
     padding: 0.5em 1em;
-  }
+  } */
 
   
